// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards component Cards empty snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cards"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="cards"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Cards component Cards snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cards"
      >
        <div
          class="card"
        >
          <div
            class="card__img card__img_witcher3"
          />
          <div
            class="rating"
          >
            8.6
          </div>
          <div
            class="content"
          >
            <h3>
              The Witcher 3
            </h3>
            <h4>
              CD Projekt RED
            </h4>
            <h5>
              2015
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_massEffect2"
          />
          <div
            class="rating"
          >
            9.3
          </div>
          <div
            class="content"
          >
            <h3>
              Mass Effect 2
            </h3>
            <h4>
              BioWare
            </h4>
            <h5>
              2010
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_fahrenheit"
          />
          <div
            class="rating"
          >
            9.1
          </div>
          <div
            class="content"
          >
            <h3>
              Fahrenheit
            </h3>
            <h4>
              Quantic Dream
            </h4>
            <h5>
              2005
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_rimWorld"
          />
          <div
            class="rating"
          >
            9.3
          </div>
          <div
            class="content"
          >
            <h3>
              RimWorld
            </h3>
            <h4>
              Ludeon Studios
            </h4>
            <h5>
              2013
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_beholder"
          />
          <div
            class="rating"
          >
            8.3
          </div>
          <div
            class="content"
          >
            <h3>
              Beholder
            </h3>
            <h4>
              Warm Lamp Games
            </h4>
            <h5>
              2016
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_nfs"
          />
          <div
            class="rating"
          >
            8.7
          </div>
          <div
            class="content"
          >
            <h3>
              NFS: Underground
            </h3>
            <h4>
              EA Games
            </h4>
            <h5>
              2003
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_bannerSaga"
          />
          <div
            class="rating"
          >
            9.1
          </div>
          <div
            class="content"
          >
            <h3>
              The Banner Saga
            </h3>
            <h4>
              Stoic
            </h4>
            <h5>
              2013
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_walkingDead"
          />
          <div
            class="rating"
          >
            9.2
          </div>
          <div
            class="content"
          >
            <h3>
              The Walking Dead
            </h3>
            <h4>
              Telltale Games
            </h4>
            <h5>
              2012
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_heavyRain"
          />
          <div
            class="rating"
          >
            9.2
          </div>
          <div
            class="content"
          >
            <h3>
              Heavy Rain
            </h3>
            <h4>
              Quantic Dream
            </h4>
            <h5>
              2010
            </h5>
          </div>
        </div>
        <div
          class="card"
        >
          <div
            class="card__img card__img_warOfMine"
          />
          <div
            class="rating"
          >
            8.7
          </div>
          <div
            class="content"
          >
            <h3>
              This War of Mine
            </h3>
            <h4>
              11 bit studios
            </h4>
            <h5>
              2014
            </h5>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cards"
    >
      <div
        class="card"
      >
        <div
          class="card__img card__img_witcher3"
        />
        <div
          class="rating"
        >
          8.6
        </div>
        <div
          class="content"
        >
          <h3>
            The Witcher 3
          </h3>
          <h4>
            CD Projekt RED
          </h4>
          <h5>
            2015
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_massEffect2"
        />
        <div
          class="rating"
        >
          9.3
        </div>
        <div
          class="content"
        >
          <h3>
            Mass Effect 2
          </h3>
          <h4>
            BioWare
          </h4>
          <h5>
            2010
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_fahrenheit"
        />
        <div
          class="rating"
        >
          9.1
        </div>
        <div
          class="content"
        >
          <h3>
            Fahrenheit
          </h3>
          <h4>
            Quantic Dream
          </h4>
          <h5>
            2005
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_rimWorld"
        />
        <div
          class="rating"
        >
          9.3
        </div>
        <div
          class="content"
        >
          <h3>
            RimWorld
          </h3>
          <h4>
            Ludeon Studios
          </h4>
          <h5>
            2013
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_beholder"
        />
        <div
          class="rating"
        >
          8.3
        </div>
        <div
          class="content"
        >
          <h3>
            Beholder
          </h3>
          <h4>
            Warm Lamp Games
          </h4>
          <h5>
            2016
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_nfs"
        />
        <div
          class="rating"
        >
          8.7
        </div>
        <div
          class="content"
        >
          <h3>
            NFS: Underground
          </h3>
          <h4>
            EA Games
          </h4>
          <h5>
            2003
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_bannerSaga"
        />
        <div
          class="rating"
        >
          9.1
        </div>
        <div
          class="content"
        >
          <h3>
            The Banner Saga
          </h3>
          <h4>
            Stoic
          </h4>
          <h5>
            2013
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_walkingDead"
        />
        <div
          class="rating"
        >
          9.2
        </div>
        <div
          class="content"
        >
          <h3>
            The Walking Dead
          </h3>
          <h4>
            Telltale Games
          </h4>
          <h5>
            2012
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_heavyRain"
        />
        <div
          class="rating"
        >
          9.2
        </div>
        <div
          class="content"
        >
          <h3>
            Heavy Rain
          </h3>
          <h4>
            Quantic Dream
          </h4>
          <h5>
            2010
          </h5>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="card__img card__img_warOfMine"
        />
        <div
          class="rating"
        >
          8.7
        </div>
        <div
          class="content"
        >
          <h3>
            This War of Mine
          </h3>
          <h4>
            11 bit studios
          </h4>
          <h5>
            2014
          </h5>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
